fix errores version mobile

--- a/src/Components/ListaTareas/styles.css
+++ b/src/Components/ListaTareas/styles.css
@@ -195,6 +195,7 @@
         right: 0;
         bottom: 0;
         margin: auto;
+        padding-bottom: 50px;
     }
 
     #todo-list{
